--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punk n Roll - Download</title>
+    <title>Punk N Roll - Download</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,10 +37,11 @@
 </head>
 <body>
 
-    <h1>Punk n Roll</h1>
+    <h1>Punk N Roll</h1>
     <p>Scarica gratuitamente il nostro album in formato ZIP</p>
 
-    <a href="https://drive.google.com/uc?export=download&id=1mUlXX1KTIYvUm9GX9ZQRLv232qWdVa4d" class="btn" target="_blank">📥 Scarica l'album</a>
+
+    <a href="https://drive.google.com/file/uc?export=download&id=1mUIXX1KTlYvUm9GX9ZQRLv232qWdVa4d" class="btn" target="_blank">📥 Scarica l'album</a>
 
     <div class="copyright">
         © 2025 [Awonagana]. Tutti i diritti riservati.<br>
