--- a/index.html
+++ b/index.html
@@ -3,51 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punk N Roll - Download</title>
+    <title>Awonagana - Punk N Roll</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #111;
-            color: #eee;
             text-align: center;
-            padding: 40px;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 50px;
         }
-        h1 {
-            color: #f39c12;
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
         }
-        .btn {
-            display: inline-block;
-            padding: 15px 25px;
-            font-size: 18px;
-            color: #fff;
-            background-color: #e74c3c;
-            text-decoration: none;
-            border-radius: 8px;
-            margin-top: 20px;
-        }
-        .btn:hover {
-            background-color: #c0392b;
-        }
-        .copyright {
-            margin-top: 40px;
-            font-size: 14px;
-            color: #bbb;
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
 
-    <h1>Punk N Roll</h1>
-    <p>Scarica gratuitamente il nostro album in formato ZIP</p>
+    <h1>Awonagana</h1>
+    <h2>Punk N Roll</h2>
+    <p>Scarica il nostro album qui:</p>
+    
+    <a href="https://drive.google.com/file/d/1mUIXX1KTlYvUm9GX9ZQRLv232qWdVa4d/view?usp=sharing" download>
+        <button>Scarica Album</button>
+    </a>
 
-
-    <a href="https://drive.google.com/file/uc?export=download&id=1mUIXX1KTlYvUm9GX9ZQRLv232qWdVa4d" class="btn" target="_blank">📥 Scarica l'album</a>
-
-    <div class="copyright">
-        © 2025 [Awonagana]. Tutti i diritti riservati.<br>
-        L'album è distribuito gratuitamente per uso personale.<br>
-        Vietata la distribuzione non autorizzata.
-    </div>
+    <p>© ANNO - TUTTI I DIRITTI RISERVATI. È VIETATA LA DISTRIBUZIONE.</p>
 
 </body>
 </html>
